# Ai_Agents_Learning

00_openai_agents/00_python-syntax/: 01_basicdataclass.py  02_nested_dataclasses.py  03_simple_inheritance.py
01_ai_agents_first/01_uv/02_project/: pyproject.toml
01_ai_agents_first/03_litellm/: chat_history.json  main.py  pyproject.toml
01_ai_agents_first/05_chainlit/: main.py  pyproject.toml
01_ai_agents_first/06_chatbot/: main.py  pyproject.toml
01_ai_agents_first/07_streaming/: 01-stream-agetn-with-tool-call.py
01_ai_agents_first/08_tools/: main.py  pyproject.toml
01_ai_agents_first/09_agent_as_tool/: code.py
01_ai_agents_first/10_context/: main.py
01_ai_agents_first/11_handoffs/: handoff.py
01_ai_agents_first/12_structured_output/: index.py
01_ai_agents_first/13_guardrails/: app.py
01_ai_agents_first/14_tracing/: 01-local-trace.py  02_agent_ops.py  03_agents_ops_multiagent.py
01_ai_agents_first/15_lifecycle/: 01-basic.py  02-advanced.py  03-agent-lifecycle.py  04-agentadvance-lifecycle.py
01_ai_agents_first/16_memory/: 01_langmem_core_api.py  02_langmem_openai_agents_sdk.py  03_persistent_memory_and_dynamic_namespace.py  04_dynamicnamespace.py  05_semantic_email_assistant_openai_agents_sdk.py  05b-agentsdk-assistant.py  readme.md
01_ai_agents_first/17_AGENTIC_RAG/: README.md  main.py  pyproject.toml
01_ai_agents_first/18_structured_rag/: chroma_client.py  gemini_embedder.py  main.py  pdf_utils.py  qa_agent.py  settings.py  (+1 more)
fromRepo/: Tools.py
fromdocs/: Runner.py  handoffs.py  input_guardrails.py  output_guardrails.py  setupconfig.py
(+22 files in other folders)
